--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,7 @@
 {
     "extends": [
-        "airbnb",
-        "prettier",
-        "prettier/react"
+        "eslint-config-airbnb/whitespace",
+        "prettier"
     ],
     "plugins": [
         "prettier"
@@ -12,7 +11,7 @@
     "rules": {
         "semi": 0,
         "react/jsx-filename-extension": [
-            1,
+            0,
             {
                 "extensions": [
                     ".ts",
@@ -23,7 +22,7 @@
             }
         ],
         "prettier/prettier": [
-            "on"
+            0
         ]
     }
 }
